--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "Carthage/Checkouts/Nimble"]
 	path = Carthage/Checkouts/Nimble
-	url = https://github.com/Quick/Nimble.git
+	url = https://github.com/edulino/Nimble.git
 [submodule "Carthage/Checkouts/Quick"]
 	path = Carthage/Checkouts/Quick
 	url = https://github.com/Quick/Quick.git
@@ -12,4 +12,4 @@
 	url = https://github.com/antitypical/Result.git
 [submodule "Carthage/Checkouts/ReactiveSwift"]
 	path = Carthage/Checkouts/ReactiveSwift
-	url = https://github.com/ReactiveCocoa/ReactiveSwift.git
+	url = https://github.com/edulino/ReactiveSwift.git
